# release-pr-bot

./: .gitignore  pyproject.toml  run.py
src/release_pr_bot/: config.py  github.py  semver.py  web.py
